Tests: toList() direkt ohne Collector verwendet