@@ -211,8 +211,8 @@ class TestGostBelegpruefung {
 									: "Fehler: EF1-Belegprüfung war nicht erfolgreich, obwohl der Testfall vorgibt, dass sie erfolgreich sein muss!");
 
 							// Prüfe, ob alle Fehlercodes des Testfalls gefunden wurden und ob zuviele Fehlercodes im Vergleich zum Testfall gefunden wurden.
-							final List<String> testfallFehler = vergleichErgebnisEF1.fehlercodes.stream().map(error -> error.code).collect(Collectors.toList());
-							final List<String> ergebnisFehler = ergebnis.fehlercodes.stream().map(error -> error.code).collect(Collectors.toList());
+							final List<String> testfallFehler = vergleichErgebnisEF1.fehlercodes.stream().map(error -> error.code).toList();
+							final List<String> ergebnisFehler = ergebnis.fehlercodes.stream().map(error -> error.code).toList();
 							final String zuwenig = testfallFehler.stream().filter(error -> !ergebnisFehler.contains(error)).collect(Collectors.joining(", "));
 							final String zuviele = ergebnisFehler.stream().filter(error -> !testfallFehler.contains(error)).collect(Collectors.joining(", "));
 							if ((!"".equals(zuwenig)) || (!"".equals(zuviele))) {
@@ -255,8 +255,8 @@ class TestGostBelegpruefung {
 
 							// Prüfe, ob alle Fehlercodes des Testfalls gefunden wurden und ob zuviele Fehlercodes im Vergleich zum Testfall gefunden wurden.
 							final List<String> testfallFehler =
-									vergleichErgebnisGesamt.fehlercodes.stream().map(error -> error.code).collect(Collectors.toList());
-							final List<String> ergebnisFehler = ergebnis.fehlercodes.stream().map(error -> error.code).collect(Collectors.toList());
+									vergleichErgebnisGesamt.fehlercodes.stream().map(error -> error.code).toList();
+							final List<String> ergebnisFehler = ergebnis.fehlercodes.stream().map(error -> error.code).toList();
 							final String zuwenig = testfallFehler.stream().filter(error -> !ergebnisFehler.contains(error)).collect(Collectors.joining(", "));
 							final String zuviele = ergebnisFehler.stream().filter(error -> !testfallFehler.contains(error)).collect(Collectors.joining(", "));
 							if ((!"".equals(zuwenig)) || (!"".equals(zuviele)))
