@@ -148,8 +148,8 @@ class TestBKGymBelegpruefung {
 
 							// Prüfe, ob alle Fehlercodes des Testfalls gefunden wurden und ob zuviele Fehlercodes im Vergleich zum Testfall gefunden wurden.
 							final List<String> testfallFehler =
-									vergleichErgebnis.fehlercodes.stream().map(error -> error.code).collect(Collectors.toList());
-							final List<String> ergebnisFehler = ergebnis.fehlercodes.stream().map(error -> error.code).collect(Collectors.toList());
+									vergleichErgebnis.fehlercodes.stream().map(error -> error.code).toList();
+							final List<String> ergebnisFehler = ergebnis.fehlercodes.stream().map(error -> error.code).toList();
 							final String zuwenig = testfallFehler.stream().filter(error -> !ergebnisFehler.contains(error)).collect(Collectors.joining(", "));
 							final String zuviele = ergebnisFehler.stream().filter(error -> !testfallFehler.contains(error)).collect(Collectors.joining(", "));
 							if ((!"".equals(zuwenig)) || (!"".equals(zuviele)))
